# Scheduling_and_allocation

./: .env.example  .gitignore  HowTo.md  LICENSE  Mac AllocationManager  Mac SchedulerProgram  README.md  README_mac.md  README_windows.md  Scheduler.py  Windows AllocationManager.lnk  Windows SchedulerProgram.lnk  database_script_tests.py  old_requirements.txt  pyproject.toml  requirements.txt  to_do.txt
Manual/: Manual(A2.0).odt  Manual(A2.0)copy.odt  SandyManual.html  SandyManual.odt
PDF_source_files/: HowTo.md  README.md
TestsAndExamples/: DrawViewTest.py  GuiBlockTest.py  MovableBlockTest.py  MultiWindowSimultaneousTest.py  W2021_2020_08_18.yaml  data_fall.csv  dragging_in_canvas.py  old_schedule.txt  spinbox.py  test_menu_and_toolbar.py
TestsAndExamples/GUI/: basic_colours_test.py  dragging_in_canvas.py  example_EditCourseTk.py  example_EditResourcesTk.py  example_Scheduler_start_page.py  example_menu_and_toolbar.py  test_AdvancedTreeView.py  test_DataEntryTk.py  test_DragNDrop.py  test_EditCourseTk.py  test_MainPageBaseTk.py  test_Scheduler_start_page.py  test_edit_courses.py  test_menu_and_toolbar.py
TestsAndExamples/gui/: change_font.py  choose_time.py  delme2.py  dragging_in_canvas.py  example_DragNDrop.py  example_EditCourseTk.py  example_EditResourcesTk.py  example_Scheduler_start_page.py  example_allocation_grid.py  example_allocation_manager.py  example_drag_n_drop.py  example_edit_block_dialog.py  example_edit_course_dialog.py  example_edit_course_tk.py  example_edit_section_dialog.py  example_menu_and_toolbar.py  example_students.py  example_view.py  example_view_canvas.py  example_view_choices.py  notebook_test.py  popup_menu.py  simple_dialog_boxes.py  simpledialog.py  test_MainPageBaseTk.py  timepicker.py
TestsAndExamples/model_unit_tests/: test_Block.py  test_Conflict.py  test_Course.py  test_Lab.py  test_LabUnavailableTime.py  test_Schedule.py  test_ScheduleWrapper.py  test_Section.py  test_SectionList.py  test_Stream.py  test_Teacher.py  test_Time_slot.py
TestsAndExamples/unit_tests_model/: biology.csv  data_test_good_input.csv  data_test_output.csv  test.csv  test_LabUnavailableTime.py  test_Undo.py  test_bad_input.csv  test_block.py  test_conflict.py  test_course.py  test_lab.py  test_reading_and_writing.py  test_schedule.py  test_schedule_time.py  test_section.py  test_stream.py  test_teacher.py  test_time_slot.py
TestsAndExamples/unit_tests_presentation/: test.csv  test_data_entry.py  test_scheduler.py
TestsAndExamples/unit_tests_presenter/: Winter2025_Final.csv  biology.csv  data_bad.csv  data_fall.csv  data_new_test.csv  data_test.csv  data_test_prev.csv  data_winter.csv  new_test.csv  silly_winter.csv  test_data_entry.py  test_edit_courses_menus.py  test_edit_resource.py  test_prev.csv  test_scheduler.py  test_view.py  test_view_controller.py  test_winter.csv
TestsAndExamples/unit_tests_schedule/: .~lock.test.csv#  .~lock.test_output.csv#  test.csv  test_Block.py  test_Conflict.py  test_Course.py  test_Lab.py  test_LabUnavailableTime.py  test_Schedule.py  test_ScheduleWrapper.py  test_Section.py  test_Stream.py  test_Teacher.py  test_Time_slot.py  test_Undo.py  test_csv  test_original.csv  test_output.csv  test_reading_and_writing.py
sample_schedules/: biology.csv
schedule/: .project  AllocationManager.pl  AllocationManager.py  ApplicationEntry.py  Bugs.txt  DrawViewTest.py  GuiBlockTest.py  InitializeSQLiteDatabase.py  MovableBlockTest.py  Scheduler.pl  Scheduler.py  SchedulerManager.pl  SchedulerManagerTk.pm  SchedulerProgram.py  SharedData.pm  Winter2025_Final.yaml  __init__.py  test.pl  tk_attempt.py  to_do.txt  todo.txt
schedule/CICalculator/: CICalc.pm  CICalc.py  CIConstants.pm
schedule/Exceptions/: exceptions.py
schedule/Experimenting/: NoPluralObject.py  TkColours.py  WithPluralObject.py  dropdown.py  dynamically_getting_properties  files.py  names.yaml  playingWithYAML.py  protocols.py
schedule/Export/: CSV.pm  DrawView.pm  DrawView.py  Excel.pm  Latex.pm  PDF.pm  template.tex  template_report.tex  view_export_canvases.py
schedule/GUI/: AddBlocksDialogTk.pm  AddBlocksDialogTk.py  AddEditSectionAdvancedDialogTk.pm  AddSectionDialogTk.pm  AddSectionDialogTk.py  AllocationGridTk.py  AllocationManagerTk.py  AllocationManagerTk2.pm  AssignBlockTk.pm  AssignBlockTk.py  AssignToResourceTk.pm  AssignToResourceTk.py  ColoursTk.py  DataEntryTk.pm  DataEntryTk.py  EditAllocationTk.pm  EditAllocationTk.py  EditBlockDialogTk.pm  EditCourseDialogTk.pm  EditCoursesTk.pm  EditCoursesTk.py  EditSectionDialogTk.pm  EditSectionDialogTk.py  FontsAndColoursTk.pm  FontsAndColoursTk.py  GuiBlockTk.pm  GuiBlockTk.py  MainPageBaseTk.pm  MainPageBaseTk.py  MainPageBaseTk_cleaned_up.py  MainPageBaseTk_old.py  MenuAndToolBarTk.py  MultipleDialog.py  NewCourseDialog.pm  NumStudentsTk.pm  NumStudentsTk.py  SchedulerTk.pm  SchedulerTk.py  SchedulerTk_old.py  ViewBaseTk.pm  (+7 more)
schedule/GUI_Dialogs/: AddBlocksDialogTk.pm  AddBlocksDialogTk.py  AddSectionDialogTk.py  AssignToResourceTk.py  EditSectionDialogTk.py
schedule/GUI_Pages/: AllocationGridTk.pm  AllocationGridTk.py  ViewTk.py  (+16 more)
(+499 files in other folders)
