# Links to tutorials on how to package projects
# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

# ================================================================================================
# Using hatchling to create the 'wheel'
# ================================================================================================
[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

# ================================================================================================
# Project specific info
# ================================================================================================
[project]

name = "Scheduling and Allocation"
version = "2025.0.1"
description = "A visual tool to make scheduling courses with teachers, labs, etc easier"
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

authors = [
  { name="Sandy Bultena", email="sandy.bultena@gmail.com" },
    {name="Ian Clement"}
]

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Cegep Teachers",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
  "pillow>=11.3.0",
  "reportlab>=4.4.3",
]

# ================================================================================================
# Basic urls for this project
# ================================================================================================
[project.urls]
Issues = "https://github.com/sandy-bultena/Scheduling_and_allocation/issues"
Repository = "https://github.com/sandy-bultena/Scheduling_and_allocation.git"

# ================================================================================================
# Scripts to run the application
# ================================================================================================
[project.scripts]
Scheduler = "schedule:SchedulerProgram:main"
Allocation = "schedule:AllocationManager:main"

[project.gui-scripts]
SchedulerGui = "schedule:SchedulerProgram:main"
AllocationGui = "schedule:AllocationManager:main"